overflow & UI Bug fixed

--- a/src/App/styling/_main.scss
+++ b/src/App/styling/_main.scss
@@ -466,7 +466,7 @@ header {
 	height: auto;
     border-radius: 0;
     color: $white;
-    background: transparent;
+    background: transparent !important;
     cursor: pointer;
 	outline: none;
 	font-size: 14px;
